[tool.poetry]
name = "cdispyutils"
version = "2.4.1"
description = "This package includes several utility Python tools for the Gen3 stack."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
cdiserrors = "*"
cryptography = "^43.0.1"
# unless this library explicitly uses features known only to a library version
# above a certain version, allow flexibility for consumers of this library to
# limit the version as necessary
requests = "*"
Flask = "*"
PyJWT = "*"
prometheus-client = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flask = "*"
mock = "*"

[tool.poetry.extras]
profiling = ["Werkzeug", "matplotlib", "numpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
